syntax = "proto3";
package echo;
option go_package = ".;proto";

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

service Echo {
  rpc UnaryEcho(EchoRequest) returns (EchoResponse){}
  rpc ServerStreamingEcho(EchoRequest) returns (stream EchoResponse) {}
  rpc ClientStreamingEcho(stream EchoRequest) returns (EchoResponse) {}
  rpc BidirectionalStreamingEcho(stream EchoRequest) returns (stream EchoResponse) {}
}

// 进入到该文件当前目录执行
// protoc --go_out=paths=source_relative:. --go-grpc_out=paths=source_relative:. *.proto